--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
